force-app/main/default/objects/Customer_Feedback__c/fields/Feedback_Source__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Source__c</fullName>
    <label>Feedback Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Portal</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Survey</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>