force-app/main/default/objects/Customer_Feedback__c/fields/Recommend_Service__c.field-meta.xml
<CustomField>
    <fullName>Recommend_Service__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recommend Service</label>
    <type>Checkbox</type>
</CustomField>