force-app/main/default/objects/Customer_Feedback__c/fields/Resolution_Satisfaction__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Satisfaction__c</fullName>
    <label>Resolution Satisfaction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Excellent</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Average</fullName>
            </value>
            <value>
                <fullName>Poor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>